Bug 457186 - Colored brackets: yellow bad contrast with breeze light
Summary: Colored brackets: yellow bad contrast with breeze light
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-27 07:18 UTC by Eric Armbruster
Modified: 2023-02-27 09:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04
Sentry Crash Report:


Attachments
bad_contrast_brackets (22.63 KB, image/png)
2022-07-27 07:18 UTC, Eric Armbruster
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Armbruster 2022-07-27 07:18:39 UTC
Created attachment 150936 [details]
bad_contrast_brackets

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Enable colored brackets.
2. Open a file and look for yellow brackets.


OBSERVED RESULT
Yellow brackets are barely visible

EXPECTED RESULT
Optimally, we would have bracket coloring that follow the current color scheme. At minimum, default colors should work well with breeze light and breeze dark.

SOFTWARE/OS VERSIONS
git master 51166756027bb0c5f3abbf019fba5e7c74e70914

ADDITIONAL INFORMATION
Comment 1 Waqar Ahmed 2022-07-27 07:55:28 UTC
Colors are now configurable so you can just adjust them to whatever you like.

It's hard to find colors that adjust with both dark and light backgrounds of multiple different themes, so this part is unlikely to get fixed. The current color set fits best with the theme that I use, may not with others.
Comment 2 Lothar 2022-07-31 07:12:42 UTC
> At minimum, default colors should work well with breeze light and breeze dark.
+1
Comment 3 Waqar Ahmed 2023-02-27 09:03:40 UTC
Git commit ddafe69fa50b31c5d067b8f44314e964adafa8d7 by Waqar Ahmed.
Committed on 27/02/2023 at 09:03.
Pushed by waqar into branch 'master'.

RainbowParens: Make default colors more suitable for breeze-light/dark
FIXED-IN: 23.04

M  +6    -5    addons/rainbow-parens/rainbowparens_plugin.cpp

https://invent.kde.org/utilities/kate/commit/ddafe69fa50b31c5d067b8f44314e964adafa8d7