RainbowParens: Make default colors more suitable for breeze-light/dark

BUG: 457186
FIXED-IN: 23.04